# xml-translator

./: .gitignore  Cargo.toml  README.md
src/: example.xml  googletranslate2.rs  main.rs
