[package]
name = "translate"
version = "0.1.0"
authors = ["nbrown30 <2702993+nbrown30@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "*"
reqwest = "^0.9.20"
hyper-openssl = "0.7.1"
docopt = "^1.0"
serde  = "^1.0"
serde_json  = "1.0"
xmltree = "0.8.0"
xml-rs = "0.8.0"
quick-xml = "^0.16.1"
regex = "1"